--- a/assets/package.json
+++ b/assets/package.json
@@ -6,10 +6,15 @@
     "watch": "./watch.sh"
   },
   "dependencies": {
+    "mobx": "^5.14.0",
+    "mobx-react": "^6.1.4",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "cssnano": "^4.1.10",
     "parcel": "^1.12.4",
     "react": "^16.10.2",
