--- a/assets/.eslintrc
+++ b/assets/.eslintrc
@@ -2,10 +2,15 @@
     "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
     "plugins": ["prettier"],
     "rules": {
-      "prettier/prettier": ["error"]
+      "prettier/prettier": ["error"],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     },
 
     "settings": {
         "jsx": true
-    }
+    },
+    "env": {
+      "browser": true,
+      "node": true
+  }
   }
