--- a/assets/package.json
+++ b/assets/package.json
@@ -12,7 +12,8 @@
         "phoenix": "file:../deps/phoenix",
         "phoenix_html": "file:../deps/phoenix_html",
         "react": "^16.10.2",
-        "react-dom": "^16.10.2"
+        "react-dom": "^16.10.2",
+        "react-router-dom": "^5.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.6.4",
